--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,6 @@
 
 
 		<script src="/socket.io/socket.io.js"></script>
-		<script>
-			let socket = io();
-
-			socket.on('connect', ()=>{
-				console.log('Connected to the server!');
-			});
-
-			socket.on('disconnect', ()=>{
-				console.log('Disconnected from server');
-			});
-		</script>
+		<script src="/js/main.js"></script>
 	</body>
 </html>
