--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,10 @@
 		<form id="message_form">
 			<div class="form-group">
 				<input type="text" id="message" name="message" placeholder="Enter message..." autofocus/>
-				<button>Send</button>
 			</div>
+				<button>Send</button>
 		</form>
+		<button id="locationButton">Send Location</button>
 
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/js/jquery-3.1.1.min.js"></script>
