--- a/public/index.html
+++ b/public/index.html
@@ -29,13 +29,37 @@
 				</form>
 				<button id="locationButton">Send Location</button>
 			</div>
-
 			
 		</div>
+
+		<script id="chat_template" type="text/template">
+			<li class="message">
+				<div class="message__title">
+					<h4>{{from}}</h4>
+					<span>{{createdAt}}</span>
+				</div>
+				<div class="message__body">
+					<p>{{text}}</p>
+				</div>
+			</li>
+		</script>
+
+		<script id="location_chat_template" type="text/template">
+			<li class="message">
+				<div class="message__title">
+					<h4>{{from}}</h4>
+					<span>{{createdAt}}</span>
+				</div>
+				<div class="message__body">
+					<p><a href="{{url}}" target="_blank">My Current Location<a></p>
+				</div>
+			</li>
+		</script>
 
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/js/libs/jquery-3.1.1.min.js"></script>
 		<script src="/js/libs/moment.js"></script>
+		<script src="/js/libs/mustache.js"></script>
 		<script src="/js/main.js"></script>
 	</body>
 </html>
