--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,13 @@
 	</head>
 	<body class="centered-form">
 		<div class="centered-form__form">
-			<form action='/chat.html'>
+			<form action='/chat.html' id="joinRoomForm">
 				<div class="form-field">
 					<h3>Join Chat</h3>
 				</div>
 				<div class="form-field">
 					<label>Display Name</label>
-					<input type='text' name='name' autofocus />
+					<input type='text' name='name' id="name" autofocus />
 				</div>
 				<div class="form-field">
 					<label>Room Name</label>
@@ -49,6 +49,13 @@
 		}
 
 		populateRoom();
+
+		$('#joinRoomForm').submit(function(){
+			if($('#name').val() == '' || $('#editable-select').val() == ''){
+				alert('Please make sure the two input are not empty');
+				return false;
+			}
+		})
 
 		$('#editable-select').editableSelect({
 			effects: 'slide',
